# tree-sitter-ink

./: .gitattributes  .gitiginore  .gitignore  .tool-versions  .werk-cache  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  Werkfile  example.ink  go.mod  grammar.js  helix.json  injectIntoHelix.sh  package-lock.json  package.json  pyproject.toml  repro.sh  test.ink  tree-sitter.json
.github/workflows/: publish.yml
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ink/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterinkTests/: TreeSitterinkTests.swift
queries/ink/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basics-1-content.txt  basics-2-choices.txt  basics-3-knots.txt  basics-4-diverts.txt  basics-6-includes-and-stitches.txt  basics-7-varying-choices.txt  basics-8-variable-text.txt  basics-9-queries-and-functions.txt  conditional-blocks.txt  lists.txt  threads.txt  tunnels.txt  variables-and-logic.txt  weave-1-gathers.txt  weave-2-nested-flow.txt  weave-3-tracking-a-weave.txt
